Draft of introduction based on Scott's outline complete

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,44 +1,19 @@
 % !TEX root = ../main.tex
 
-\section{Introduction (Scott)}
+\section{Introduction (Ben)}
+When Bitcoin was created in 2008, many digital currencies already existed, but Bitcoin would quickly come to surpass them all. A dedicated base of developers, advocates, users, and speculative investors coalesced around shared enthusiasm for Bitcoin's decentralized governance model, and that enthusiasm spread to the mainstream shortly after. A core component of Bitcoin that allows it to achieve decentralized governance is its peer-replicated consensus-based data store -- a blockchain\footnote{We will use small-b blockchain to describe an instance of the data store and big-B Blockchain as shorthand for Blockchain technology, which is the field of blockchain primitives, systems, and applications.}. After Bitcoin gained popularity, competing digital currencies and existing financial institutions quickly began to try to use Blockchain for their own applications, and in a short time the enthusiasm spread to seemingly every sector of public and private commerce. 
 
+The rapid and dynamic emergence of this technology left many researchers, businesses, and governments to ask: (1) what is Blockchain and what properties does they provide, (2) would Blockchain be useful for the work I am doing, and (3) what are the broad applications for Blockchain?
+
+There have been some attempts to answer these questions (see \S\ref{sec:related-works}), but not at the level of generality that is needed by practitioners. Academic surveys and systematizations focus on individual components of Blockchain: either specific systems~\cite{BMC+15, Conti17, Narayanan17} or specific technical primitives~\cite{Gervais16, Croman16, Bano17, new_consensus_SOK}. These results are of great value for those with the technical knowledge to understand them in context, but they do little to enlighten the layperson.
+
+Industry, rather than academia, has fueled most of the hype for Blockchain as they search for applications and new product offerings it can enable. As a result, they have produced much of the thought leadership in this space, but this analysis has typically been overlooked by academics.
+
+In this paper, we attempt to answer the three questions by surveying data from industry. Because of the imprecise and often unscientific nature of industry analysis as well as our focus on systematization without judgment, we applied a research method commonly used in the social sciences called grounded theory. Our contributions are:
 \begin{enumerate}
-
-	\item Bitcoin took the world by storm
-	\begin{enumerate}
-	\item While there were previous digital currencies, Bitcoin was the first truly successful currency
-	\item Strong interest in the decentralized nature of Bitcoin. Particularly in the notion that everyone collectively owned the system
-	\item Rocketed in value, before recently crashing
-	\end{enumerate}
-
-	\item Bitcoin has spawned many competing systems
-	\begin{enumerate}
-	\item Many are financial
-	\item Even more systems have explored whether the underlying technologies of Bitcoin can be used in new an interesting ways.
-	\end{enumerate}
-
-	\item This has left many researchers, businesses, and governments to ask: (1) what is blockchain and what properties does it provide, (2) would blockchain be useful for the work I am doing, and (3) what are the broad applications of Blockchain.
-	\begin{enumerate}
-		\item There have been some attempts to address these quesitons
-		\item Often, these answers are fragmented
-		\item Academia often speaks of specific features (ADS, blockchain, consensus), sometimes misses the forest for the trees
-		\item Interestingly, a lot of the thought leadership in this area is not from academia, but rather from industry, yet this information is often overlooked by academics
-		\begin{enumerate}
-			\item Academia has excelled at specific problems, and not the vision of this topic
-		\end{enumerate}
-	\end{enumerate}
-
-	\item In this paper, we attempt to answer these three questions by pulling data from industry
-	\begin{enumerate}
-		\item We used a grounded theory process to avoid imposing our research bias
-		\item Separated out fact from hype from misconceptions (which were rather rare and stemmed from a different vocabulary) 
-	\end{enumerate}
-
-	\item Contributions
-	\begin{enumerate}
-		\item Identify a clear set of criteria for determining whether Blockchain
-		\item Enumerate use cases for Blockchain technology and help prioritize them
-		\item Identify open problems regarding Blockchain technology. We also identify Academic work in this area.
-	\end{enumerate}
-
+	\item Identifying a clear set of criteria for determining the applicability of Blockchain to a given application
+	\item Enumerating valid use cases for Blockchain based on those criteria and prioritizing them
+	\item Identifying open problems in Blockchain research and highlighting relevant academic work
 \end{enumerate}
+
+The paper is organized as follows: \bnote{Finish this after paper structure is complete.}
