--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -1,6 +1,7 @@
 % !TEX root = ../main.tex
 
 \section{Related Works}
+\label{sec:related-works}
 Several prior authors have surveyed and systematized different aspects of the Blockchain landscape.
 One of the most comprehensive works is from Bonneau et al., focusing on Bitcoin and other cryptocurrencies~\cite{BMC+15}. The authors seek to understand how Bitcoin has worked successfully and securely in practice for several years despite the lack of a rigorous model for its correctness and security. %From a host of disparate sources, they distill a clear technical overview of how Bitcoin works. They then systematize the properties sufficient for system stability and analyze how they hold up under different assumptions about the incentives for miners. Finally, they evaluate and compare proposed changes to Bitcoin including tweaks to system parameters, alternative consensus protocols, and improvements to privacy and anonymity and conclude with a discussion of additional functionalities that Bitcoin could be extended to provide.  
 Their approach differs from ours in several key ways, reflecting that our analyses have fundamentally different goals. They focus on a single application of Blockchain technology and survey technical sources in order to analyze how those systems work and how design changes might affect functionality. By instead surveying sources that analyze Blockchain, we systematize the collective knowledge of the community to understand how Blockchain is being thought about and used by practitioners. This approach allows us to reason about how Blockchain may be useful in novel scenarios and to separate out normative beliefs from technical ones. 
@@ -11,5 +12,5 @@ Narayanan and Clark separate out the key technical ideas expressed in the design
 
 A paper by Conti et al. focuses on security and privacy issues in Bitcoin~\cite{Conti17}. The authors survey and tabulate known attacks against Bitcoin as well as countermeasures and upgrade proposals that could improve privacy and anonymity. In a similar vein, Henry et al. submit that current blockchain designs offer inadequate privacy protections and propose research directions to address the problem~\cite{Henry18}. Our work complements this research; in particular, our finding that industry analysts overstate the inherent privacy of Blockchain underscores its importance. 
 
-Finally, there are several papers which analyze specific technical components of Blockchain in great depth. Gervais et al. provide a framework for analyzing the security and performance of different proof-of-work (PoW) Blockchain configurations, including Bitcoin and other cryptocurrencies~\cite{Gervais16}. Croman et al. similarly consider performance issues that appear when Blockchain is deployed at scale and suggest research directions. Bano et al. systematize different protocols for consensus and provide an evaluation framework to compare and contrast them~\cite{Bano17}. %This paper serves an important purpose by connecting decades of "classical" research on consensus protocols to modern systems developed with Blockchain in mind.
+Finally, there are several papers which analyze specific technical components of Blockchain in great depth. Gervais et al. provide a framework for analyzing the security and performance of different proof-of-work (PoW) Blockchain configurations, including Bitcoin and other cryptocurrencies~\cite{Gervais16}. Croman et al. similarly consider performance issues that appear when Blockchain is deployed at scale and suggest research directions~\cite{Croman16}. Bano et al. systematize different protocols for consensus and provide an evaluation framework to compare and contrast them~\cite{Bano17}. %This paper serves an important purpose by connecting decades of "classical" research on consensus protocols to modern systems developed with Blockchain in mind.
 Our approach differs from these three in both scope and perspective, as we provide a broader but less deep analysis of Blockchain's technical features and limitations and primarily clarify not how Blockchain systems works technically but how analysts and users perceive them to work.
