Finished pass through challenges section

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1180,4 +1180,129 @@ Scalable off-chain instant payments},
   shorttitle   = {What is {Certificate} {Transparency}?},
 }
 
+@InProceedings{CCS:MKKS15,
+  author =       "Andrew Miller and
+                  Ahmed E. Kosba and
+                  Jonathan Katz and
+                  Elaine Shi",
+  title =        "Nonoutsourceable Scratch-Off Puzzles to Discourage Bitcoin Mining Coalitions",
+  pages =        "680--691",
+  editor =       ccs15ed,
+  booktitle =    ccs15name,
+  address =      ccs15addr,
+  month =        ccs15month,
+  publisher =    ccspub,
+  year =         2015,
+}
+
+@article{Kiviat15,
+  author = 		"Trevor I. Kiviat",
+  title = 		"Beyond Bitcoin: Issues in Regulating Blockchain Transactions",
+  journal = 	"Duke Law Journal",
+  Volume = 	"65, Issue 3",
+  year = 		"2015",
+  month = 		"December",
+  pages = 		"569-608"
+}
+
+@inproceedings{C:Lindell17,
+  author    = {Yehuda Lindell},
+  title     = {Fast Secure Two-Party {ECDSA} Signing},
+  booktitle = {Advances in Cryptology - {CRYPTO} 2017 - 37th Annual International
+               Cryptology Conference, Santa Barbara, CA, USA, August 20-24, 2017,
+               Proceedings, Part {II}},
+  pages     = {613--644},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/978-3-319-63715-0\_21},
+  doi       = {10.1007/978-3-319-63715-0\_21},
+  timestamp = {Mon, 14 Aug 2017 14:42:11 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/crypto/Lindell17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{CCS:LinNof18,
+  author	= {Yehuda Lindell and
+  		Ariel Nof},
+  title = 	{Fast Secure Multiparty ECDSA with Practical Distributed Key Generation and Applications to Cryptocurrency Custody},
+  booktitle = 	{CCS},
+  year = 	{2018}
+}
+
+@article{arxiv:ECBS18,
+  author    = {Shayan Eskandari and
+               Jeremy Clark and
+               David Barrera and
+               Elizabeth Stobert},
+  title     = {A first look at the usability of bitcoin key management},
+  journal   = {CoRR},
+  volume    = {abs/1802.04351},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.04351},
+  archivePrefix = {arXiv},
+  eprint    = {1802.04351},
+  timestamp = {Mon, 13 Aug 2018 16:49:02 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1802-04351},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{PKC:Boldyreva03,
+  author =       "Alexandra Boldyreva",
+  title =        "Threshold Signatures, Multisignatures and Blind Signatures Based on the Gap-{Diffie}-{Hellman}-Group Signature Scheme",
+  pages =        "31--46",
+  editor =       pkc03ed,
+  booktitle =    pkc03name,
+  volume =       pkc03vol,
+  address =      pkc03addr,
+  month =        pkc03month,
+  publisher =    pkcpub,
+  series =       mylncs,
+  year =         2003,
+}
+
+@InProceedings{EC:GJKR96,
+  author =       "Rosario Gennaro and
+                  Stanislaw Jarecki and
+                  Hugo Krawczyk and
+                  Tal Rabin",
+  title =        "Robust Threshold {DSS} Signatures",
+  pages =        "354--371",
+  editor =       eurocrypt96ed,
+  booktitle =    eurocrypt96name,
+  volume =       eurocrypt96vol,
+  address =      eurocrypt96addr,
+  month =        eurocrypt96month,
+  publisher =    eurocryptpub,
+  series =       mylncs,
+  year =         1996,
+}
+
+@InProceedings{EC:Shoup00a,
+  author =       "Victor Shoup",
+  title =        "Practical Threshold Signatures",
+  pages =        "207--220",
+  editor =       eurocrypt00ed,
+  booktitle =    eurocrypt00name,
+  volume =       eurocrypt00vol,
+  address =      eurocrypt00addr,
+  month =        eurocrypt00month,
+  publisher =    eurocryptpub,
+  series =       mylncs,
+  year =         2000,
+}
+
+@inproceedings{USS:WhiTyg99,
+  author    = {Alma Whitten and
+               J. Doug Tygar},
+  title     = {Why Johnny Can't Encrypt: {A} Usability Evaluation of {PGP} 5.0},
+  booktitle = {Proceedings of the 8th {USENIX} Security Symposium, Washington, DC,
+               USA, August 23-26, 1999},
+  year      = {1999},
+  crossref  = {DBLP:conf/uss/1999},
+  url       = {https://www.usenix.org/conference/8th-usenix-security-symposium/why-johnny-cant-encrypt-usability-evaluation-pgp-50},
+  timestamp = {Wed, 04 Jul 2018 13:06:34 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/uss/WhittenT99},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 @Comment{jabref-meta: databaseType:biblatex;}
