Changes to the introduction and methodology.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -345,6 +345,15 @@
 	Title = {{Blind signatures for untraceable payments}},
 	Year = {1982}}
 
+@inproceedings{chaum1988untraceable,
+	title={Untraceable electronic cash},
+	author={Chaum, David and Fiat, Amos and Naor, Moni},
+	booktitle={Conference on the Theory and Application of Cryptography},
+	pages={319--327},
+	year={1988},
+	organization={Springer}
+}
+
 @inproceedings{YSLT10,
 	Author = {Yuen, W and Syverson, Paul and Liu, Z and Thorpe, C},
 	Booktitle = {Financial Cryptography},
@@ -1304,5 +1313,77 @@ Scalable off-chain instant payments},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@misc{back1997partial,
+	title={A partial hash collision based postage scheme},
+	author={Back, Adam},
+	year={1997}
+}
+
+@misc{garay2018consensus,
+	author = {Juan Garay and Aggelos Kiayias},
+	title = {SoK: A Consensus Taxonomy in the Blockchain Era},
+	howpublished = {Cryptology ePrint Archive, Report 2018/754},
+	year = {2018},
+	note = {\url{https://eprint.iacr.org/2018/754}},
+}
+
+@article{glaser1965constant,
+	title={The constant comparative method of qualitative analysis},
+	author={Glaser, Barney G},
+	journal={Social problems},
+	volume={12},
+	number={4},
+	pages={436--445},
+	year={1965},
+	publisher={JSTOR}
+}
+
+@article{corbin1990grounded,
+	ISSN = {03401804},
+	URL = {http://www.jstor.org/stable/23845563},
+	abstract = {Using grounded theory as an example, this paper examines three methodological questions that are generally applicable to all qualitative methods. How should the usual scientific canons be reinterpreted for qualitative research? How should researchers report the procedures and canons used in their research? What evaluative criteria should be used in judging the research products? The basic argument we propose is that the criteria should be adapted to fit the procedures of the method. We demonstrate how we have done this with grounded theory and suggest criteria for evaluating studies done in this mode. We suggest that other qualitative researchers might be similarly specific about their procedures and evaluative criteria.},
+	author = {Juliet Corbin and Anselm Strauss},
+	journal = {Zeitschrift für Soziologie},
+	number = {6},
+	pages = {418-427},
+	publisher = {Lucius & Lucius Verlagsgesellscheft mbH},
+	title = {Grounded theory research: {P}rocedures, canons and evaluative criteria},
+	volume = {19},
+	year = {1990}
+}
+
+@book{strauss1990basics,
+	title={Basics of qualitative research: Grounded theory procedures and techniques.},
+	author={Strauss, Anselm and Corbin, Juliet M},
+	year={1990},
+	publisher={Sage Publications, Inc}
+}
+
+@article{wolfswinkel2013using,
+	title={Using grounded theory as a method for rigorously reviewing literature},
+	author={Wolfswinkel, Joost F and Furtmueller, Elfi and Wilderom, Celeste PM},
+	journal={European journal of information systems},
+	volume={22},
+	number={1},
+	pages={45--55},
+	year={2013},
+	publisher={Taylor \& Francis}
+}
+
+@article{yang2012descriptive,
+	title={A descriptive literature review and classification of cloud computing research.},
+	author={Yang, Haibo and Tate, Mary},
+	journal={CAIS},
+	volume={31},
+	pages={2},
+	year={2012}
+}
+
+@inproceedings{ruoti2017weighing,
+	title={Weighing context and trade-offs: How suburban adults selected their online security posture},
+	author={Ruoti, Scott and Monson, Tyler and Wu, Justin and Zappala, Daniel and Seamons, Kent},
+	booktitle={Thirteenth Symposium on Usable Privacy and Security ($\{$SOUPS$\}$ 2017). USENIX Association},
+	year={2017}
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
