--- a/paper/main.tex
+++ b/paper/main.tex
@@ -13,7 +13,8 @@
 
 \begin{document}
 \title{SoK: Blockchain Technology and Its Applications}
-\author{Anonymous}
+%TODO: This needs to be anonymized when submitted.
+\author{Scott Ruoti, Ben Kaiser, Arkady Yerukhimovich, Jeremy Clark, Rob Cunningham}
 \maketitle
 
 %====================================================================
