--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,19 +1,40 @@
 % !TEX root = ../main.tex
 
-\section{Introduction (Ben)}
-When Bitcoin was created in 2008, many digital currencies already existed, but Bitcoin would quickly come to surpass them all. A dedicated base of developers, advocates, users, and speculative investors coalesced around shared enthusiasm for Bitcoin's decentralized governance model, and that enthusiasm spread to the mainstream shortly after. A core component of Bitcoin that allows it to achieve decentralized governance is its peer-replicated consensus-based data store -- a blockchain\footnote{We will use small-b blockchain to describe an instance of the data store and big-B Blockchain as shorthand for Blockchain technology, which is the field of blockchain primitives, systems, and applications.}. After Bitcoin gained popularity, competing digital currencies and existing financial institutions quickly began to try to use Blockchain for their own applications, and in a short time the enthusiasm spread to seemingly every sector of public and private commerce. 
+\section{Introduction}
+In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable payments.
+Later, Chaum et al.~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out system, eCash.
+eCash was the first cryptocurrency---i.e., ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
+Early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
-The rapid and dynamic emergence of this technology left many researchers, businesses, and governments to ask: (1) what is Blockchain and what properties does they provide, (2) would Blockchain be useful for the work I am doing, and (3) what are the broad applications for Blockchain?
+In 2008, an author using the pseudonym Satoshi Nakamoto~\cite{Nak08} proposed Bitcoin.
+Unlike centralized cryptocurrencies which rely on a set of known entities to run the cryptocurrency, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
+To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
+While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} that led to the first cryptocurrency to see wide-spread popularity and usage.
 
-There have been some attempts to answer these questions (see \S\ref{sec:related-works}), but not at the level of generality that is needed by practitioners. Academic surveys and systematizations focus on individual components of Blockchain: either specific systems~\cite{BMC+15, Conti17, Narayanan17} or specific technical primitives~\cite{Gervais16, Croman16, Bano17, new_consensus_SOK}. These results are of great value for those with the technical knowledge to understand them in context, but they do little to enlighten the layperson.
+At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$125.83 billion).
+Nevertheless, there remains interest interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
+In particular, we have heard researchers, businesses, and governments repeatedly ask the following four questions related to Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, (3) how does it compare to other approaches (e.g., distributed databases), (4) what are reasonable applications for Blockchain technology.
 
-Industry, rather than academia, has fueled most of the hype for Blockchain as they search for applications and new product offerings it can enable. As a result, they have produced much of the thought leadership in this space, but this analysis has typically been overlooked by academics.
+To answer these questions, its insufficient to consider academic sources alone.
+While there have been several academic overviews written in this space, they have not addressed these general question regarding Blockchain technology, but rather surveyed particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
+In contrast, there has been significant work from the industrial sector (hereafter referred to as \emph{industry}) attempting to answers the questions as they search for applications and new product offerings that could be enabled by Blockchain technology.
+Unfortunately, much of this work is fueled by hype and lacks the peer-review process and rigor expected of academic literature.
 
-In this paper, we attempt to answer the three questions by surveying data from industry. Because of the imprecise and often unscientific nature of industry analysis as well as our focus on systematization without judgment, we applied a research method commonly used in the social sciences called grounded theory. Our contributions are:
+To address these limitations in literature produced by industry, we leveraged grounded theory~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to analyze the corpus of work produced by industry (see \S\ref{sec:method}).
+This allowed us to extract the valuable technical insights from the hype and technical misunderstanding that permeates this body of work.
+Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, this work answers the four questions commonly asked in relation to Blockchain technology.
+
+More concretely, our key contributions are,
+
 \begin{enumerate}
-	\item Identifying a clear set of criteria for determining the applicability of Blockchain to a given application
-	\item Enumerating valid use cases for Blockchain based on those criteria and prioritizing them
-	\item Identifying open problems in Blockchain research and highlighting relevant academic work
+	\item \textbf{Defining the key technical features of Blockchain technology.}
+		
+	\item \textbf{Identifying the capabilities provided by Blockchain technology.}
+		
+	\item \textbf{Describe how Blockchain technology fits in relation to other distributed systems.}
+	
+	\item \textbf{Identify the applications that could benefit from the use of Blockchain technology.}
+	
+	\item \textbf{Detailing open research questions in the area of Blockchain technology.}
+	
 \end{enumerate}
-
-The paper is organized as follows: \bnote{Finish this after paper structure is complete.}
