Updating author information and chart.

--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -62,7 +62,7 @@ Our grounded theory analysis revealed that the key properties of a blockchain ar
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=\textwidth]{figures/BlockchainFlowchart.png}
+	\includegraphics[width=\textwidth]{figures/BlockchainFlowchart}
 	\caption{A classification of different database systems to illustrate Blockchain's place in the taxonomy}
 	\label{fig:blockchainFlowchart}
 \end{figure*}
