--- a/paper/main.tex
+++ b/paper/main.tex
@@ -14,7 +14,51 @@
 \begin{document}
 \title{SoK: Blockchain Technology and Its Applications}
 %TODO: This needs to be anonymized when submitted.
-\author{Scott Ruoti, Ben Kaiser, Arkady Yerukhimovich, Jeremy Clark, Rob Cunningham}
+\author{Scott Ruoti, Ben Kaiser, , Jeremy Clark, Rob Cunningham}
+
+
+\author{
+	\IEEEauthorblockN{Scott Ruoti}
+	\IEEEauthorblockA{
+		University of Tennessee, Knoxville\\
+		MIT Lincoln Laboratory\\
+		\textit{ruoti@utk.edu}
+	} \\
+
+	\IEEEauthorblockN{Jeremy Clark}
+	\IEEEauthorblockA{
+		Concordia University\\
+		%\textit{}
+	}
+
+	\and
+	
+	\IEEEauthorblockN{Ben Kaiser}
+	\IEEEauthorblockA{
+		Princeton\\
+		MIT Lincoln Laboratory\\
+		\hspace{\baselineskip}%\textit{}
+	}\\
+
+	\IEEEauthorblockN{Robert Cunningham}
+	\IEEEauthorblockA{
+		Carnagie Mellon University\\
+		Software Engineering Institute\\
+		MIT Lincoln Laboratory\\
+		%\textit{}
+	}
+
+	
+	\and
+	
+	\IEEEauthorblockN{Arkady Yerukhimovich}
+	\IEEEauthorblockA{
+		George Washington University\\
+		MIT Lincoln Laboratory\\
+		%\textit{}
+	}
+}
+
 \maketitle
 
 %====================================================================
