Wordsmithing and a few comments added

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -3,7 +3,7 @@
 \section{Methodology}
 \label{sec:method}
 
-In this work, we sought to offer a high-level overview of Blockahin technology.
+In this work, we sought to offer a high-level overview of Blockchain technology.
 To accomplish this, we took the standard academic approach of surveying the available literature.
 During this process, it became clear that the majority of work exploring Blockchain's capabilities and use cases comes from industry.\footnote{Here, we define industry as corporations, small and medium business, startups, and consortia.}
 
@@ -12,12 +12,12 @@ In particular, there are three main concerns when reviewing materials that origi
 
 \begin{enumerate}
 	\item \textbf{Lack of precise terminology and discussion.}
-	In our review of materials from industry, we found that the same concepts were often described using divergent and imprecise terminology, leading to muddled descriptions of capabilities and use cases.
-	Additionally, while there is a fair bit of factually inaccurate information in materials from industry (e.g., several documents claimed cryptographic signatures provide confidentiality), in several cases we clearly observed that the underlying idea being described was accurate but was phrased in such a way as to make it seem incorrect under cursory examination.
+	In our review of materials from industry, we found that the same concepts were often described using divergent and imprecise terminology, leading to difficult to understand white papers and sometimes muddled descriptions of capabilities and use cases.
+	Additionally, while there is a fair bit of factually inaccurate information in materials from industry (e.g., several documents claimed cryptographic signatures provide confidentiality), in several cases we  observed an accurate description of an idea that was phrased in such a way as to make it seem incorrect under cursory examination. Some of those ideas were assembled in ways that are interesting to academics, if one takes the time to work through the material.
 	In this regard, materials from industry represent a trove of useful information obscured by imprecise terminology and discussion.
 	
 	\item \textbf{Inclusion of hype.}
-	Much of the material from industry includes visionary statements (i.e., hype) regarding how Blockchain technology will change technology and the world.
+	Much of the material from industry includes visionary statements (i.e., hype) regarding how Blockchain technology will change business practices, power dynamics and the way the world works.
 	This hype is a mixture of realistic applications that can be built on top of Blockchain systems (e.g., anonymous payments~\cite{chaum1988untraceable}) and ideals that far transcend any technical solution (e.g., removing the need for governments).
 	Unfortunately, unlike what one would expect in academic literature, the materials from industry often intermingle hype with technical details. This at least partially explains why some in academia are quick to dismiss sources from industry.
 	
