--- a/paper/setup/macros.tex
+++ b/paper/setup/macros.tex
@@ -73,3 +73,4 @@
 \usepackage{todonotes}
 \newcommand{\anote}[1]{\todo[inline]{Arkady:  #1}}
 \newcommand{\bnote}[1]{\todo[inline]{Ben:  #1}}
+\newcommand{\rnote}[1]{\todo[inline]{Rob: #1}}
