--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,13 +1,13 @@
 % !TEX root = ../main.tex
 
 \section{Introduction}
+\rnote{I think that we need to start with the notion of a hash chain used to establish the integrity of a set of data or perhaps a sequence of actions, given the title of the paper.  I'm not certain what the right reference is though: is it to the paper on Merkle trees?}
 In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable payments.
 Later, Chaum et al.~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out system, eCash.
 eCash was the first cryptocurrency---i.e., ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
 Early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
-In 2008, an author using the pseudonym Satoshi Nakamoto~\cite{Nak08} proposed Bitcoin.
-Unlike centralized cryptocurrencies which rely on a set of known entities to run the cryptocurrency, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
+These key ideas were brought together in 2008 with several others as Bitcoin by an author using the pseudonym Satoshi Nakamoto~\cite{Nak08}. Unlike centralized cryptocurrencies which rely on a set of known entities to run the cryptocurrency, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
 To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} that led to the first cryptocurrency to see wide-spread popularity and usage.
 
