--- a/paper/main.tex
+++ b/paper/main.tex
@@ -7,6 +7,10 @@
 \input{setup/packages}
 \input{setup/macros}
 
+\usepackage{draftwatermark}
+\SetWatermarkColor[gray]{0.9}
+
+
 %====================================================================
 
 \IEEEoverridecommandlockouts
