Major changes to the results section.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1386,4 +1386,65 @@ Scalable off-chain instant payments},
 	year={2017}
 }
 
+@inproceedings{castro1999practical,
+	title={Practical Byzantine fault tolerance},
+	author={Castro, Miguel and Liskov, Barbara and others},
+	booktitle={OSDI},
+	volume={99},
+	pages={173--186},
+	year={1999}
+}
+
+@inproceedings{tamassia2003authenticated,
+	title={Authenticated data structures},
+	author={Tamassia, Roberto},
+	booktitle={European Symposium on Algorithms},
+	pages={2--5},
+	year={2003},
+	organization={Springer}
+}
+
+@incollection{bayer1993improving,
+	title={Improving the efficiency and reliability of digital time-stamping},
+	author={Bayer, Dave and Haber, Stuart and Stornetta, W Scott},
+	booktitle={Sequences II},
+	pages={329--334},
+	year={1993},
+	publisher={Springer}
+}
+
+@inproceedings{haber1990time,
+	title={How to time-stamp a digital document},
+	author={Haber, Stuart and Stornetta, W Scott},
+	booktitle={Conference on the Theory and Application of Cryptography},
+	pages={437--455},
+	year={1990},
+	organization={Springer}
+}
+
+@inproceedings{haber1997secure,
+	title={Secure names for bit-strings},
+	author={Haber, Stuart and Stornetta, W Scott},
+	booktitle={Proceedings of the 4th ACM Conference on Computer and Communications Security},
+	pages={28--35},
+	year={1997},
+	organization={ACM}
+}
+
+@article{ruoti2015johnny,
+	title={Why Johnny still, still can't encrypt: Evaluating the usability of a modern PGP client},
+	author={Ruoti, Scott and Andersen, Jeff and Zappala, Daniel and Seamons, Kent},
+	journal={arXiv preprint arXiv:1510.08555},
+	year={2015}
+}
+
+@inproceedings{barber2012bitter,
+	title={Bitter to better—how to make bitcoin a better currency},
+	author={Barber, Simon and Boyen, Xavier and Shi, Elaine and Uzun, Ersin},
+	booktitle={International Conference on Financial Cryptography and Data Security},
+	pages={399--414},
+	year={2012},
+	organization={Springer}
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
