--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main.tex
 
-\section{Challenges}
+\section{Research Challenges}
 \label{sec:challenges}
 
 % Jeremy: Arkady -- please see reclustering of previous section and use it to motivate why these are the right subset to study.
