--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -28,7 +28,12 @@ More concretely, our key contributions are,
 
 \begin{enumerate}
 	\item \textbf{Defining the key technical features of Blockchain technology.}
-		
+	Based on the results of our analysis we identify three key properties for Blockchain technology: shared governance and operation, an append-only ledger, and replication.
+	Blockchain systems are both governed and operated by a distributed collection of entities that individually and collectively ensure that all operations are valid.
+	These operations are recovered in an append-only ledger that provides full-system provenance.
+	This ledger is also replicated by all governing parties providing resilience against data loss and malicious modification of data.
+	We also discuss other related technical properties that enabled Blockchain's various capabilities.
+	
 	\item \textbf{Identifying the capabilities provided by Blockchain technology.}
 		
 	\item \textbf{Describe how Blockchain technology fits in relation to other distributed systems.}
